[package]
name = "btc_price_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
serde_json = "1.0"
futures-util = "0.3"
clap = "4.4.18"






[[bin]]
name = "simple"
path = "src/bin/main.rs"

[lib]
path = "src/lib/mod.rs"


